src/styles/pages/_admin.scss
$admin-topbar-height: 50px;

.admin {
  &__getStarted {
    display: flex;
    &__arrow {
      padding-left: 20px;
      padding-right: 15px;
    }
    &__text {
      font-size: $font-size-xlarge;
      margin-top: auto;
      font-weight: 325;
    }
  }
  &__topbar {
    @include topbar($admin-topbar-height, $very-light-green);
    z-index: 5 !important; // this allows modals to sit above it.
    display: flex;
    justify-content: space-between;
    font-size: $font-size-normal;
    padding-left: 15px;
    padding-right: 15px;
    border-bottom: 2px solid $light-grey;

    &--createCourse {
      width: 132px;
      padding-left: 10px;
      padding-right: 10px;
      text-align: center;
    }

    &__nav {
      height: 80%;
      display: flex;
      justify-content: space-around;
      border: 1px solid $brand-color;
      border-radius: 2px;
    }

    &__navButton {
      @include button(white, shade($brand-color, 20%));
      font-weight: 500;
      padding: 6px 80px 6px 80px;
      border-right: 1px solid tint($brand-color, 50%);
      border-left: 1px solid tint($brand-color, 50%);
      font-size: $font-size-medium;

      @media screen and (max-width: 1330px) {
        padding: 6px 20px 6px 20px;
      }

      &--active {
        @include button($brand-color, white);
        font-weight: bold;
        font-size: $font-size-large;
        padding: 6px 80px 6px 80px;

        @media screen and (max-width: 1330px) {
          padding: 6px 20px 6px 20px;
        }
      }
    }
    &__rightBox {
      display: flex;
      align-items: center;
    }

    &__spacing {
      height: 50px;
    }
  }

  &__main-panel {
    &__content-container {
      // min-height is the total window size minus height of topbar and admin topbars
      min-height: calc(100vh - #{$topbar-height} - #{$admin-topbar-height});
      padding: 20px 50px 10px 50px;
      transition: 0.3s;

      &--locked {
        // min-height is the total window size minus height of topbar and admin topbars
        min-height: calc(100vh - #{$topbar-height} - #{$admin-topbar-height});
        padding: 20px 50px 10px 50px;
        background-color: rgba(0, 0, 0, 0.1);
        transition: 0.3s;
      }
    }
  }
  @include setMinPageHeight($topbar-height);
  &__onboardingModal {
    cursor: pointer;
    @include badgeFormat($mid-grey, white);
    margin-left: 25px;
    cursor: pointer;
  }
  &__lockMessage {
    &-container {
      position: absolute;
      width: 100%;
      left: 0px;
      display: flex;
      justify-content: space-around;
      margin-top: 10px;
    }
    &-text {
      padding: 6px 20px 6px 20px;
      color: white;
      background-color: #616161;
      width: fit-content;
      font-weight: 500;
      opacity: 0.9;
      $font-size: $font-size-small;
    }
  }
  &__lockBtn {
    background-color: white;
    margin-right: 5px;
    margin-bottom: 80px;

    .md-icon {
      @media screen and (min-width: 1025px) {
        font-size: 24px;
      }
    }
  }
  &__backBtn {
    @include icon-button(20px, 8px);
  }
}

.manageUsers {
  &__rosterUpload {
    text-transform: none;
    margin-top: 30px;
  }
}

.md-btn--floating {
  @media screen and (min-width: 1025px) {
    height: 56px !important;
    padding: 16px !important;
    width: 56px !important;
    bottom: 16px !important;
    right: 16px !important;
  }
}

.RubricCommentExplorer {
  .md-dialog {
    width: 70%;
    min-width: 400px;
    max-height: calc(100vh - 200px);
    overflow-y: scroll;
    /* height problem caused by dialog adding html to the page to move 'top'
     Short fix now is to max the div height always be less than the view size minus topbar
      This way the close button is always visible */
  }
}

